--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 development:
   password: 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
-  theme_id: "121737904315" #Template istore  - Builder Hero
+  theme_id: "121737904315" #Template da loja
   store: dev-istore.myshopify.com
   ignore_files : 
     - config/settings_data.json
